--- a/main/templates/main/teachers-details.html
+++ b/main/templates/main/teachers-details.html
@@ -33,7 +33,11 @@
       <div class="row">
          <div class="col-xxl-4 col-xl-4 col-lg-4 col-md-6">
             <div class="teacher__details-thumb p-relative w-img pr-30">
-               <img src="{{ teacher.image.url }}" alt="">
+               {% if teacher.image %}
+                   <img src="{{ teacher.image.url }}" alt="{{ teacher.name }}">
+               {% else %}
+                   <img src="#" alt="Нет фото">
+               {% endif %}
             </div>
          </div>
          <div class="col-xxl-8 col-xl-8 col-lg-8">
