--- a/main/templates/main/subscribe.html
+++ b/main/templates/main/subscribe.html
@@ -53,7 +53,11 @@
                 <p class="mb-30">
                     Актуальные новости, интересные события, и скидки на курсы.
                 </p>
-                <a href="{% url 'index' %}" class="tp-btn">Вернуться на главную</a>
+                    <div class="sign__header mb-35">
+                        <div class="sign__in text-center">
+                            <p> <a href="{% url 'index' %}"> Вернуться на главную </a> </p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
