--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -218,7 +218,7 @@
                               {% csrf_token %}
                               <div class="footer__subscribe-box">
                                  <div class="footer__subscribe-input">
-                                    <input type="email" name="email" placeholder="Email address" required>
+                                    <input type="email" name="email" placeholder="Email адрес" required>
                                  </div>
                                  <button class="footer-sub-btn" type="submit">Подписаться</button>
                               </div>
