--- a/main/templates/main/about-us.html
+++ b/main/templates/main/about-us.html
@@ -1,6 +1,6 @@
 {% extends 'main/base.html' %}
 
-{% block title %}About Us{% endblock %}
+{% block title %}О нас{% endblock %}
 
 {% block content %}
 {% load static %}
