--- a/main/templates/main/contact.html
+++ b/main/templates/main/contact.html
@@ -1,6 +1,6 @@
 {% extends 'main/base.html' %}
 
-{% block title %}Свяжись с нами{% endblock %}
+{% block title %}Контакты{% endblock %}
 
 {% block content %}
 {% load static %}
