--- a/manager_panel/templates/manager_panel/manager-account.html
+++ b/manager_panel/templates/manager_panel/manager-account.html
@@ -45,6 +45,9 @@
                 <a class="btn btn-secondary" href="{% url 'manager_enrollment_requests' %}" ><h5>Заявки</h5></a>
                 <a class="btn btn-secondary" href="{% url 'manager_questions_list' %}" ><h5>Вопросы</h5></a>
                 <a class="btn btn-secondary" href="{% url 'manager_news_list' %}" ><h5>Новости</h5></a>
+                <a class="btn btn-secondary" href="{% url 'manager_subscribers_list' %}" ><h5>Подписчики</h5></a>
+                <a class="btn btn-secondary" href="{% url 'manager_reviews_list' %}" ><h5>Отзывы</h5></a>
+                <a class="btn btn-secondary" href="{% url 'manager_payments_list' %}" ><h5>Оплаты</h5></a>
             </div>
          </div>
       </div>
