--- a/manager_panel/templates/manager_panel/news/send_newsletter_custom.html
+++ b/manager_panel/templates/manager_panel/news/send_newsletter_custom.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}  {# или ваша основа макета #}
+{% extends 'base.html' %}
 
 {% block content %}
 <div class="container mt-4">
