--- a/main/templates/main/teachers.html
+++ b/main/templates/main/teachers.html
@@ -42,16 +42,20 @@
                   <div class="tp-team-2__member fix mb-30">
                      <div class="tp-team-2__img w-img tp-team-2__overlay p-relative">
                         {% if teacher.image %}
-                            <img src="{{ teacher.image.url }}" alt="{{ teacher.name }}">
+                        <img src="{{ teacher.image.url }}" alt="">
                         {% else %}
-                            <img src="#" alt="Нет фото">
+                        <img src="{% static 'main/img/no_img/images.png' %}" alt="Нет изображения">
                         {% endif %}
                         <div class="tp-team-2__social">
                         </div>
                      </div>
                      <div class="tp-team-2__info">
                         <h3 class="tp-team-2__name"><a href="{% url 'teacher_detail' teacher.id %}">{{ teacher.last_name }} {{ teacher.first_name }}</a></h3>
-                        <span class="tp-team-2__pro">Teacher MBA</span> <br>
+                        {% if teacher.stack %}
+                        <span class="tp-team-2__pro">{{ teacher.stack }}</span> <br>
+                        {% else %}
+                        <span class="tp-team-2__pro">Преподаватель школы</span> <br>
+                        {% endif %}
                         <span class="tp-team-2__ratting">
                            <i class="fas fa-star"></i>
                            <i class="fas fa-star"></i>
