--- a/main/templates/main/teachers-details.html
+++ b/main/templates/main/teachers-details.html
@@ -77,23 +77,14 @@
                   {% if related_courses %}
                      <h2 class="section__title">Курсы <span class="yellow-bg yellow-bg-big">преподавателя</span></h2>
                   {% else %}
-                     <h2 class="section__title"> <span class="yellow-bg yellow-bg-big">Этот преподаветель не ведёт курсы в данный момент</span></h2>
+                     <h2 class="section__title"> <span class="yellow-bg yellow-bg-big">Этот преподаватель не ведёт курсы в данный момент</span></h2>
                   {% endif %}
                </div>
                <div class="row">
                   {% for related_course in related_courses %}
                   <div class="col-lg-4 col-md-6">
                      <div class="tp-courses__item mb-30">
-                        <div class="tp-courses__thumb w-img fix p-relative">
-                           <img src="main/img/courses/courses-1.jpg" alt="">
-                           <span class="tp-courses__cat cat-color-1"><a href="#">Web Design</a></span>
-                        </div>
                         <div class="tp-courses__content white-bg">
-                           <div class="tp-courses__meta">
-                              <span class="tp-ratting"><i class="icon_star_alt"></i> 4.5 (100)</span>
-                              <span><i class="icon_heart_alt"></i>18,400</span>
-                              <span><i class="fa-light fa-user"></i>365</span>
-                           </div>
                            <h3 class="tp-courses__title">
                               <a href="{% url 'course-detail' related_course.id %}">{{ related_course.title }}</a>
                            </h3>
