--- a/main/templates/main/subscribe.html
+++ b/main/templates/main/subscribe.html
@@ -31,33 +31,32 @@
         <div class="row justify-content-center">
             <div class="col-xl-8 col-lg-10">
                 <div class="subscribe__confirmation text-center">
-                <div class="subscribe__icon mb-30">
-                    <i class="fa-solid fa-envelope-circle-check fa-3x" style="color: #00C896;"></i>
+                    <div class="subscribe__icon mb-30">
+                        <i class="fa-solid fa-envelope-circle-check fa-3x" style="color: #00C896;"></i>
                         {% if messages %}
                             {% for message in messages %}
                             <div class="alert alert-{{ message.tags }}">{{ message }}</div>
                             {% endfor %}
                         {% endif %}
 
-                           <form action="{% url 'subscribe' %}" method="post" class="subscribe-form">
-                              {% csrf_token %}
-                              <div class="footer__subscribe-box">
-                                 <div class="footer__subscribe-input">
-                                    <input type="email" name="email" placeholder="Email адресс" required>
-                                 </div>
-                                 <button class="footer-sub-btn" type="submit">Подписаться</button>
-                              </div>
-                           </form>
+                       <form action="{% url 'subscribe' %}" method="post" class="subscribe-form">
+                          {% csrf_token %}
+                          <div class="footer__subscribe-box">
+                             <div class="footer__subscribe-input">
+                                <input type="email" name="email" placeholder="Email адресс" required>
+                             </div>
+                             <button class="footer-sub-btn" type="submit">Подписаться</button>
+                          </div>
+                       </form>
+                    </div>
                 </div>
                 <h2 class="subscribe__title mb-20">Подпишись, чтобы ничего не пропустить!</h2>
                 <p class="mb-30">
                     Актуальные новости, интересные события, и скидки на курсы.
                 </p>
-                    <div class="sign__header mb-35">
-                        <div class="sign__in text-center">
-                            <p> <a href="{% url 'index' %}"> Вернуться на главную </a> </p>
-                        </div>
-                    </div>
+                <a href="{% url 'index' %}" class="btn btn-secondary px-4 py-2">
+                    <i class="bi bi-arrow-left-circle"></i> На главную
+                </a>
                 </div>
             </div>
         </div>
